<resources>
    <string name="app_name">BHOJANA</string>
    <string name="logo">logo</string>
    <string name="bhojana">BHOJANA</string>
    <string name="design">design</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="moto">Never wait for your food again</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="menu">menu</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="deals">Deals</string>
    <string name="fullname">Fullname</string>
    <string name="enter_fullname">Enter Fullname</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_same_password_again">Enter Same Password Again</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="foodtype">Food Type</string>
    <string name="restaurant_photos">RESTAURANT PHOTOS</string>
    <string name="rating">rating</string>
    <string name="timetaken">timetaken</string>
    <string name="servicecharge">servicecharge</string>
    <string name="restaurants">Restaurants</string>
</resources>