<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#2F323C"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/appname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/rubik_bold"
        android:gravity="center"
        android:letterSpacing="0.2"
        android:padding="10dp"
        android:text="@string/bhojana"
        android:textColor="#FFF"
        android:textSize="35sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appname"
        android:padding="10dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullname"
                android:textColor="#D0A559"
                android:textSize="20sp"
                android:layout_margin="10dp"
                />
            <EditText
                android:id="@+id/fullnametxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_fullname"
                android:textColorHint="#D0A559"
                android:backgroundTint="#D0A559"
                android:inputType="text"
                android:textColor="#D0A559"
                android:importantForAutofill="no"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="50dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Username"
                android:textColor="#D0A559"
                android:textSize="20sp"
                android:layout_margin="10dp"
                />
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                android:textColorHint="#D0A559"
                android:backgroundTint="#D0A559"
                android:inputType="text"
                android:textColor="#D0A559"
                android:importantForAutofill="no"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="50dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#D0A559"
                android:textSize="20sp"
                android:layout_margin="10dp"
                />
            <EditText
                android:id="@+id/emailtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:textColorHint="#D0A559"
                android:textColor="#D0A559"
                android:backgroundTint="#D0A559"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="50dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#D0A559"
                android:textSize="20sp"
                android:layout_margin="10dp"
                />
            <EditText
                android:id="@+id/passwordtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:textColorHint="#D0A559"
                android:backgroundTint="#D0A559"
                android:textColor="#D0A559"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="50dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textColor="#D0A559"
                android:textSize="20sp"
                android:layout_margin="10dp"
                />
            <EditText
                android:id="@+id/confirmpasswordtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_same_password_again"
                android:textColorHint="#D0A559"
                android:backgroundTint="#D0A559"
                android:inputType="textPassword"
                android:textColor="#D0A559"
                android:importantForAutofill="no"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="50dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <android.widget.Button
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/signupbtn"
                    android:text="@string/register"
                    android:layout_margin="30dp"
                    android:textAllCaps="false"
                    android:textSize="20sp" />

                <android.widget.Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/signinbtn"
                    android:text="@string/cancel"
                    android:textColor="#D0A559"
                    android:layout_margin="30dp"
                    android:textAllCaps="false"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/logintxtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="#D0A559"
                android:textSize="20sp"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>