<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/restaurantimage"
            android:src="@mipmap/homephoto"
            android:layout_margin="20dp"
            android:contentDescription="@string/restaurant_photos" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/curveedge"
            android:layout_marginTop="-200dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:padding="10dp"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/restaurant_name"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/restaurant_type"
                android:textSize="15sp"
                android:textColor="#000"
                />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/restaurant_address"
                    android:textSize="15sp"
                    android:textColor="#000"
                    android:layout_marginStart="10dp"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/star"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/rating" />
                <TextView
                    android:id="@+id/restaurant_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/time"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/timetaken" />

                <TextView
                    android:id="@+id/restaurant_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/servicecharge"
                    android:src="@drawable/servicce"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/servicecharge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/restaurant_service"
                    />


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>