<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F323C"
    tools:context=".HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/nav"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/menu"
            android:background="#2F323C"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/menu" />
        <EditText
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:id="@+id/searchhome"
            android:padding="10dp"
            android:hint="@string/search"
            android:importantForAutofill="no"
            android:textColor="#D0A559"
            android:textColorHint="#D0A559"
            android:backgroundTint="#D0A559"
            android:inputType="text" />
        <ImageButton
            android:id="@+id/searchbtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#2F323C"
            android:src="@drawable/search"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/search" />
        <ImageButton
            android:id="@+id/profilebtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#2F323C"
            android:src="@drawable/profile"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/profile" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:id="@+id/dealssection"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deals"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="#D0A559"
            android:text="@string/deals" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/deals"
            android:fillViewport="true"
            android:layout_marginStart="10dp"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dealsrecycleview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                />

        </HorizontalScrollView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/dealssection"
        android:id="@+id/restauranttypes"
        android:orientation="vertical"
        android:background="#D0A559"
        >
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/Nepali"
                android:layout_margin="10dp"
                />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/Italian"
                android:layout_margin="10dp"
                />
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/French"
                android:layout_margin="10dp"
                />
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/Chineese"
                android:layout_margin="10dp"
                />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"
                    android:id="@+id/Mexican"
                    android:layout_margin="10dp"
                    />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"
                    android:id="@+id/Korean"
                    android:layout_margin="10dp"
                    />
            </LinearLayout>

        </HorizontalScrollView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurants"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_margin="10dp"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/restaurantlist"
                />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</RelativeLayout>